[tool.poetry]
name = "witenc"
version = "0.1.1"
description = "Implements a signature based witness encryption scheme based on the BLS signatures"
authors = ["David L. Adei <lokingdav@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
